# hlist2_trait_macro

./: Cargo.toml  LICENSE-MIT  README.md
impl_trait_hlist_macro/: Cargo.toml
impl_trait_hlist_macro/src/: lib.rs
src/: angle_bracketed_generic_params.rs  cons.rs  generic_param_to_arg.rs  hlist_macro.rs  lib.rs  nil.rs  trait_hlist.rs  trait_hlist_input.rs  trait_hlist_macro.rs  trait_hlist_method.rs
tests/: simple_proc.rs  tests.rs
