[package]
name = "hlist2_trait_macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macro for compile-time heterogeneous lists whose elements share a trait."
authors = ["Danila Bain <danila.bain@yandex.com>"]
repository = "https://github.com/Danila-Bain/hlist2_trait_macro"
license = "MIT"
keywords = ["safe", "heterogeneous", "hlist"]
categories = ["data-structures", "rust-patterns", "algorithms"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
hlist2 = "*"
